Amended calculator functions to allow basic calculations to work with all operators, exception of equals sign. Improved calculator interactivity.

--- a/calculator.css
+++ b/calculator.css
@@ -69,7 +69,6 @@ footer {
     box-shadow: 5px 5px;
 }
 
-
 .buttons { 
     flex-wrap: wrap;
     justify-content: center;
@@ -86,5 +85,10 @@ footer {
 
 .calculatorTop > .buttons {
     width: 90px;
+}
+
+.buttons > .buttonHover { 
+    transform: scale(1.05);
+    background-color:rgba(230, 238, 240, 0.83);
 }
 
