--- a/calculator.css
+++ b/calculator.css
@@ -11,7 +11,6 @@ header, footer {
     background-color: rgb(63 172 181 / 83%);
     color: white; 
     font-size: 26px;
-    
     display: flex;
     justify-content: center;;
     align-items: center;
@@ -56,14 +55,15 @@ footer {
 .calculatorBottom {
     width: 450px;
     height: 400px;
-    justify-content: left;;
+    justify-content: left;
+    
 }
 
 .answerScreen {
     justify-content: center;
-    margin: 50px 20px 50px 50px;
+    margin: 50px 0px 50px 50px;
     width: 290px;
-    height: 170px;
+    height: 175px;
     font-size: 22px;
     background-color: white;
     box-shadow: 5px 5px;
@@ -81,14 +81,20 @@ footer {
     height: 80px;
     background-color: white;
     box-shadow: 5px 5px;
+    transition: 0.09s;
 }
 
 .calculatorTop > .buttons {
-    width: 90px;
+    justify-content: left;
+    margin-left: 20px;
 }
 
 .buttons > .buttonHover { 
     transform: scale(1.05);
     background-color:rgba(230, 238, 240, 0.83);
+}
+
+.buttons > .buttonClick {
+    transform: scale(0.99);
 }
 
